# video-ps-kinematics

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.example.yaml  tuning_example.yaml
scripts/: analyze.py  classify.py  classify_nn.py  prepare_tulip.py  prepare_yolo_pseudolabels.py  preprocess_videos.py  run_pipeline.py  validate_yolo_finetuned.py
src/ps_kinematics/: __init__.py  core.py  gpu_manager.py  io.py  kinematics.py  plotting.py  processor.py  tracker.py  utils.py  video_quality.py  workers.py  yolo_tracker.py
src/ps_kinematics/analysis/: __init__.py  _constants.py  _demographics.py  _features.py  _filtering.py  _merge.py  _plotting.py  _statistics.py  clinical_alignment.py  cycle_detection_accuracy.py  longitudinal.py  medication.py  orchestrator.py  pca_varimax.py  recording_angle.py  signal_diagnostics.py  signal_quality_scoring.py  video_quality_factors.py
src/ps_kinematics/config/: __init__.py  loader.py
src/ps_kinematics/refinement/: __init__.py  openpose.py  rtmpose.py  superres.py  yolo.py
